# domain-security-analyzer

./: .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  complete-dmarc-guide.md  csc-dmarc-template-filled.md  dmarc-CNAME-guide.md  dns-bulk-change-template-filled.md  domain_analyzer.py  domains.txt  pyproject.toml  report.csv  requirements.txt  test_domains.txt  validation_test.csv
.github/workflows/: ci.yml  release.yml  syntax-check.yml
docs/: csv-output-reference.md  dkim-reference.md  dmarc-CNAME-guide.md  dmarc-reference.md  spf-reference.md  sri-reference.md
domain_security_analyzer/: __init__.py  __main__.py  __version__.py  analyzer.py  cli.py  sri.py
domain_security_analyzer/web/: __init__.py  __main__.py  app.py  cli.py  runs.py
domain_security_analyzer/web/static/: style.css
domain_security_analyzer/web/templates/: base.html  changes.html  index.html  progress.html  results.html
examples/: domains.txt  parked-lock-record-sample.csv
scripts/: parked_domain_csv.py  sri_parser.py  test_wildcard_filtering.py
tests/: test_analyzer.py  test_cli.py  test_packaging.py  test_sri.py  test_web.py
